5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1637_2443.log
== SUBMITION (2019-04-04 13:55:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

r = float(input("raio: "))
x = float(input("altura: "))
n = int(input("volume do ar (1) / volume de combustive (2): "))

ve = 4*pi*(r**3)/3
vc = pi*x**2 * (3r - x)

if(n == 1):
	print(round(vc,4))
else:
	print(round(ve - vc,4))
-- EXECUTION TIME:
0.20911
-- ERROR:
  File "/home/codebench/codes/1637/2443/main.py", line 11
    vc = pi*x**2 * (3r - x)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 13:55:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

r = float(input("raio: "))
x = float(input("altura: "))
n = int(input("volume do ar (1) / volume de combustive (2): "))

ve = 4*pi*(r**3)/3
vc = pi*x**2 * (3r - x)/3

if(n == 1):
	print(round(vc,4))
else:
	print(round(ve - vc,4))
-- EXECUTION TIME:
0.14757
-- ERROR:
  File "/home/codebench/codes/1637/2443/main.py", line 11
    vc = pi*x**2 * (3r - x)/3
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:57:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

r = float(input("raio: "))
x = float(input("altura: "))
n = int(input("volume do ar (1) / volume de combustive (2): "))

ve = 4*pi*(r**3)/3
vc = pi*x**2 * (3*r -x)/3

if(n == 1):
	print(round(vc,4))
else:
	print(round(ve - vc,4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 13:57:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

r = float(input("raio: "))
x = float(input("altura: "))
n = int(input("volume do ar (1) / volume de combustive (2): "))

ve = 4*pi*(r**3)/3
vc = pi*x**2 * (3*r -x)/3

if(n == 1):
	print(round(vc,4))
else:
	print(round(ve - vc,4))
-- EXECUTION TIME:
0.147014
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 12:22:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

r = float(input("raio: "))
x = float(input("altura: "))
n = int(input("volume do ar (1) / volume de combustive (2): "))

ve = 4*pi*(r**3)/3
vc = pi*x**2 * (3*r -x)/3

if(n == 1):
	print(round(vc,4))
else:
	print(round(ve - vc,4))
-- EXECUTION TIME:
0.224914
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
